--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <h1>Energy mix interactive</h1>
         </header>
 
+        <iframe width="1211" height="1003" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQpcJrSK8SWhFIjUcBtzdnBh5DvlOmfAHAfA4qlLMCVdTtQf79oFVc8bVIK_Fgr6C23SrODNtQmdHgn/pubchart?oid=539316328&amp;format=interactive"></iframe>
+        
         <iframe width="1212" height="628" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQpcJrSK8SWhFIjUcBtzdnBh5DvlOmfAHAfA4qlLMCVdTtQf79oFVc8bVIK_Fgr6C23SrODNtQmdHgn/pubchart?oid=820789037&amp;format=interactive"></iframe>
       
         <h1>Renewables interactive</h1>
