--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <h1>Energy mix interactive</h1>
         </header>
         
+        <h1>Coal production and imports </h1>
         <iframe width="1212" height="594" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQArk5KH35NBO01rmWpmfdLR-pX9DM3ho-BkP8yrx2_7s8aalo6o5IR7a-P5BqZYXWNdZzueC4bl9uK/pubchart?oid=1117238786&amp;format=interactive"></iframe>
         
         <h1>Energy mix by month </h1>
